--- a/public/style.css
+++ b/public/style.css
@@ -81,17 +81,32 @@ nav:hover{
 
 #name-social-container {
     margin-top: 20vh;
+ 
 
 }
 
 #my-name {
-    font-size: 3rem;
-    letter-spacing: 0.1rem;
-    color:black;
-    font-weight: 700;
-    margin-bottom: 0.5rem;
-    text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+    font-size: 4rem;
+    float: left;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  letter-spacing: 0.1em;
+  
+  animation: 
+     typing 3.5s steps(35, end) infinite alternate-reverse, 
+    blink-caret 0.5s step-end infinite; 
+     text-shadow: 2px 2px grey;
 }
+@keyframes typing {
+    from { width: 0 }
+    to { width: 40% }
+  }
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
 
 
 .social-icons li a i {
@@ -544,3 +559,39 @@ button:hover{
     text-align:justify;
     line-height:1;
 }
+
+/****** animations********/
+.slider {
+    --s: 150px; /* cube size */
+    display: grid;
+    width: var(--s);
+    aspect-ratio: 1;
+    transform-style: preserve-3d;
+    --_p: perspective(calc(2.5*var(--s)));
+    animation: r 9s infinite cubic-bezier(.5,-0.5,.5,1.5);
+    float:right;
+    padding:40px;
+  }
+  .slider img {
+    background-color: #fbd786;
+    grid-area: 1/1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: var(--_t, ) translateZ(calc(var(--s)/2));
+  }
+  .slider img:nth-child(2) {--_t: rotateX(-90deg)}
+  .slider img:nth-child(3) {--_t: rotateY( 90deg) rotate(-90deg)}
+  .slider img:nth-child(4) {--_t: rotateX(180deg) rotate( 90deg)}
+  .slider img:nth-child(5) {--_t: rotateX( 90deg) rotate( 90deg)}
+  .slider img:nth-child(6) {--_t: rotateY(-90deg)}
+
+  @keyframes r {
+    0%,3%   {transform: var(--_p) rotateX( 0deg) rotate( 0deg) rotateY(  0deg) rotateX( 0deg) rotate( 0deg) rotateY(  0deg)}
+    14%,19% {transform: var(--_p) rotateX(90deg) rotate( 0deg) rotateY(  0deg) rotateX( 0deg) rotate( 0deg) rotateY(  0deg)}
+    31%,36% {transform: var(--_p) rotateX(90deg) rotate(90deg) rotateY(  0deg) rotateX( 0deg) rotate( 0deg) rotateY(  0deg)}
+    47%,52% {transform: var(--_p) rotateX(90deg) rotate(90deg) rotateY(-90deg) rotateX( 0deg) rotate( 0deg) rotateY(  0deg)}
+    64%,69% {transform: var(--_p) rotateX(90deg) rotate(90deg) rotateY(-90deg) rotateX(90deg) rotate( 0deg) rotateY(  0deg)}
+    81%,86% {transform: var(--_p) rotateX(90deg) rotate(90deg) rotateY(-90deg) rotateX(90deg) rotate(90deg) rotateY(  0deg)}
+    97%,to  {transform: var(--_p) rotateX(90deg) rotate(90deg) rotateY(-90deg) rotateX(90deg) rotate(90deg) rotateY(-90deg)}
+  }
